# yt-backend

./: .env.default  .gitignore  Makefile  README.md  config.py  pyproject.toml  setup.cfg  yt_backend.py
db/: db_schema_and_tests.txt
helpers/: ArchiveVideosChannel.py  Dicts_Main.py  Excel_New_Approach.py  Metadator.xlsx  YT_functions.py  YoutubeMagicRSS.xlsx  aux_lists.py  db_helpers.py  excel_helper.py  metadata_wizard.py  playground_VK.py
ytparser/: __main__.py  config.py  worker.py
ytparser/rssclient/: client.py  model.py
ytparser/youtube/: client.py  model.py
