[tool.poetry]
name = "youtube"
version = "0.1.0"
description = "Youtube API backened service to parse youtube channels"
authors = ["Viktor Kertanov"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
openpyxl = "^3.0.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
