[tool.poetry]
name = "youtube"
version = "0.1.0"
description = "Youtube API backened service to parse youtube channels"
authors = ["Viktor Kertanov"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
openpyxl = "^3.0.9"
requests = "^2.27.1"
pydantic = "^1.9.0"
structlog = "^21.5.0"
httpx = "^0.21.3"
rich = "^11.0.0"
"ruamel.yaml" = "^0.17.20"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
